istio/staging/destinationrule-payment-metrics.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: payment-metrics-no-mtls
  namespace: staging
spec:
  host: payment.staging.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 8090
        tls:
          mode: DISABLE
