istio/staging/authorization-policy-prometheus-payment.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-prometheus-scrape-payment
  namespace: staging
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: payment
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - "cluster.local/ns/observability/sa/prometheus-kube-prometheus-prometheus"
      to:
        - operation:
            paths:
              - /payment/actuator
              - /payment/actuator/*
              - /actuator
              - /actuator/*
              - /payment/prometheus
              - /prometheus
