istio/staging/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: restrict-cart-access
  namespace: staging
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: cart
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - "cluster.local/ns/staging/sa/storefront-bff"
              - "cluster.local/ns/staging/sa/order"
    - to:
        - operation:
            paths:
              - /cart/actuator
              - /cart/actuator/*
              - /actuator
              - /actuator/*
              - /cart/prometheus
